plugins {
    id 'java'
}

group 'com.derongan.minecraft'
version '1.4-SNAPSHOT'

sourceCompatibility = 17

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = 17
    options.compilerArgs
            << "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
            << "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
            << "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
            << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
}

configurations {
    shade
    implementation.extendsFrom shade
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/groups/public/'
    }
}


//Make it chubby
jar {
    from {
        configurations.shade.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

dependencies {
    compileOnly "org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT"
    shade group: 'io.github.classgraph', name: 'classgraph', version: '4.4.12'
    //testCompileOnly group: 'junit', name: 'junit', version: '4.12'
}